This should do it

--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,25 @@ poetry.toml
 
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
 settings.json
-.vscode/
